@@ -295,14 +295,18 @@ General configuration
 .. confval:: numfig_format
 
    A dictionary mapping ``'figure'``, ``'table'``, ``'code-block'`` and
-   ``'section'`` to strings that are used for format of figure numbers.  Default
-   is to use ``'Fig. %s'`` for ``'figure'``, ``'Table %s'`` for ``'table'``,
-   ``'Listing %s'`` for ``'code-block'`` and ``'Section'`` for ``'section'``.
+   ``'section'`` to strings that are used for format of figure numbers.
+   As a special character, `%s` and `{number}` will be replaced to figure
+   number.  `{name}` will be replaced to figure caption.
+
+   Default is to use ``'Fig. %s'`` for ``'figure'``, ``'Table %s'`` for
+   ``'table'``, ``'Listing %s'`` for ``'code-block'`` and ``'Section'`` for
+   ``'section'``.
 
    .. versionadded:: 1.3
 
    .. versionchanged:: 1.5
-      Support format of section
+      Support format of section. Allow to refer the caption of figures.
 
 .. confval:: numfig_secnum_depth
 
